week-9/meme_results/dreme_msgs.txt
  File "/Users/cmdb/miniconda3/bin/dreme", line 765
    print "Finding secondary RE in left flank..."
                                                ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print("Finding secondary RE in left flank...")?
